fixed alignment issue with tables on admin page on smaller screens

--- a/pages/admin/admin.module.css
+++ b/pages/admin/admin.module.css
@@ -180,5 +180,6 @@
 @media (max-width: 767px) {
   .top_container {
     flex-direction: column;
+    align-items: center;
   }
 }
